2008-09-16  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c:
	(hildon_touch_selector_entry_changed): Check if there is no text
	selected before setting the entry text.
	Fixes: NB#88576

2008-09-15  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-touch-selector.h
	* src/hildon-touch-selector.c
	(hildon_touch_selector_get_active)
	(hildon_touch_selector_set_active): New methods to set/get the
	index of the selected item.

	* src/hildon-picker-button.h
	* src/hildon-picker-button.c
	(hildon_picker_button_get_active)
	(hildon_picker_button_set_active): New methods to set/get the
	index of the selected item.

2008-09-15  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post-release version bump.

2008-09-15  Claudio Saavedra  <csaavedra@igalia.com>

	Release 2.1.10-1.

	* configure.ac: Pre-release version bump.
	* debian/changelog: Updates.
	* debian/control: Add myself as maintainer and depend on l10n
	packages.

2008-09-15  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window.c
	(hildon_window_set_main_menu)
	* src/hildon-stackable-window.c
	(hildon_stackable_window_set_main_menu):
	Updated documentation.

2008-09-15  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-date-selector.c (hildon_date_selector_finalize):
	Don't free selector->priv manually.
	Fixes: NB#88414

2008-09-12  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-gtk.c,
	(hildon_gtk_window_set_progress_indicator):
	* src/hildon-gtk.h: Added the new API
	hildon_gtk_window_set_progress_indicator, it changes the state of
	the window progress hint.

2008-09-12  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c
	* src/hildon-stackable-window.c: Minor documentation updates.

2008-09-12  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c: Updated documentation.

2008-09-12  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-defines.h: Update margins definitions
	to the Fremantle sizes.
	Fixes: NB#88364
